   images back and forth in the image order.

** Incompatible changes

 + Issue #35: Change the sematic of the --date command line option to
   photoidx.py and imageview.py: when an intervall is given as
   argument, the end time is taken exclusively.
   E.g. --date=2015-03-14--2015-03-15 excludes images taken on
   March 15.

** Bug fixes and minor changes

 + Index.index() now supports the full variant having start and end
   index arguments.

* Version 0.7 (2017-12-31)

** New features

 + Issue #21: Add more information to the info window.

 + Issue #27: Set default scale of imageview such that the first image
   just fits the maximum window size.

** Bug fixes and minor changes

 + Issue #28: use pytest-dependency to mark dependencies in the test
   suite.

* Version 0.6 (2017-05-22)

** New features

 + Issue #24: Add an overview window.

** Bug fixes and minor changes

 + Issue #25: imageview should remember rotation.

 + Issue #22: Unwanted unicode marker for tags in the index.

 + Issue #26: Get rid of PyGIWarning.

 + Add an optional attribute `name` to the items in the index.  Use
   it as the title of the imageview window if set.

* Version 0.5 (2016-08-22)

** New features

 + Issue #19: Manage a persistent selection

 + Issue #17: Speed up start of imageview when building in memory
   index for many files.

 + Issue #18: Add an image info window in imageview.

 + Do not throw an error in imageview if an image cannot be read,
   proceed to the next one instead.

** Internal changes

 + Do not change directory when reading the image directory.

* Version 0.4 (2016-04-12)

** New features

 + Issue #4: Add option to photoidx to add missing images to an
   index.

 + Issue #10: Allow setting of new tags from imageview.

 + Issue #11: imageview should be able to work without an index.

 + Issue #5: Allow a date interval as argument to --date.

 + Issue #12: Allow configuration of the type of checksum to be
   calculated.

** Incompatible changes
